--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
---extra-index-url https://download.pytorch.org/whl/cu124
+--extra-index-url https://download.pytorch.org/whl/cu126
 datasets==3.6.0
-vllm==0.8.5.post1
-torch==2.6.0
+vllm==0.9.0.1
+torch==2.7.0
